[gd_scene load_steps=5 format=3 uid="uid://7svbw6y8i85w"]

[ext_resource type="Script" path="res://AI/ai_controller.gd" id="1_1g7xp"]
[ext_resource type="PackedScene" uid="uid://b7rf58fa5tf7c" path="res://AI/aggressive_ai.tscn" id="2_2it5o"]
[ext_resource type="PackedScene" uid="uid://bh6eut3k8n3aq" path="res://NPC/Manager/manager_ai_tree.tscn" id="3_n5scb"]
[ext_resource type="Shape3D" uid="uid://dpvuqlxwkw00e" path="res://detection_shape.tres" id="4_dd7ns"]

[node name="AIController" type="Node3D" groups=["Controller"]]
script = ExtResource("1_1g7xp")
ai_tree = Array[PackedScene]([ExtResource("2_2it5o"), ExtResource("3_n5scb")])

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true

[node name="DetectionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.39248, 1.8495)
visible = false
collision_layer = 0
collision_mask = 6
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = ExtResource("4_dd7ns")

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.39018, 1.84894)
shape = ExtResource("4_dd7ns")
collision_mask = 6

[node name="ForgetTarget" type="Timer" parent="."]
one_shot = true

[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="timeout" from="ForgetTarget" to="." method="forget_target"]
